--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,20 @@
 /* You can add global styles to this file, and also import other style files */
+
+/* Importing Bootstrap SCSS file. */
+@import "./node_modules/bootstrap/scss/bootstrap";
+
+/* Importing Datepicker SCSS file. */
+@import "node_modules/ngx-bootstrap/datepicker/bs-datepicker";
+
+/* Importing Bootstrap SCSS file. */
+@import "bootstrap/scss/bootstrap";
+
+@font-face {
+  font-family: "BuenosAiresWeb-Regular";
+  src: url("/assets/BuenosAiresWebTrial-Regular.woff");
+}
+
+body {
+  font-family: BuenosAiresWeb-Regular, Helvetica Neue, Helvetica, Arial,
+    sans-serif;
+}
