--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,9 @@
 <div class="home-container d-flex flex-column">
-  <search-widget (submit)="searchOptions()" class="mt-auto"></search-widget>
+  <div class="mt-auto mb-lg-auto">
+    <div class="d-flex justify-content-center mb-3">
+      <typography look="title">Stay With Us</typography>
+    </div>
+
+    <search-widget (submit)="searchOptions()"></search-widget>
+  </div>
 </div>
